--- a/projects.html
+++ b/projects.html
@@ -47,10 +47,10 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder"><a class=" navbar-brand btn-link" href="https://www.youtube.com/watch?v=GQnHk9dnE48"> The Use of Drones for Landmine Detection</a></h2>
+                                            <h2 class="fw-bolder">The Use of Drones for Landmine Detection</h2>
                                             <p>Development of a <a href="https://www.youtube.com/watch?v=GQnHk9dnE48"  target="_blank">award-winning device </a> for remotely locating and providing the exact coordinates of explosive objects on the surface and ones buried under it. The core idea of the project is electromagnetic (HF/LF GPR) and optical (Hyperspectral, RGB) research of surfaces in order to detect explosive devices regardless of their parameters. Data is analysed by Artificial Neural Network (ANN) algorithms to provide accurate identification.</p>
                                         </div>
-                                    <!--<img class="img-fluid" src="assets/DronePic.jpg" alt="..." /> -->
+                                    <!--<img class="img-fluid" src="assets/SpDronePic.jpg" alt="..." /> -->
                                     </div>
                                 </div>
                             </div>
